force-app/main/default/objects/Account/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>