force-app/main/default/objects/Account/fields/ARTL_Account_Billing_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Account_Billing_Credit_Limit__c</fullName>
    <label>Account Billing Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>