force-app/main/default/objects/Account/fields/ARTL_Account_Covered_in_last_15_days__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Account_Covered_in_last_15_days__c</fullName>
    <formula>IF(
    AND(
        RecordType.DeveloperName = &apos;Business&apos;,
        OR(
            ISPICKVAL(ARTL_Customer_Segment__c, &apos;AB&apos;),
            ISPICKVAL(ARTL_Customer_Segment__c, &apos;Global&apos;)
        ),
        OR(
            TODAY() - DATEVALUE (Last_Account_Coverage_DateTime__c) &lt; 15,
            TODAY() - LastActivityDate &lt; 15, 
            TODAY() - DATEVALUE(LastModifiedDate) &lt; 15 
        )
    ),
    true, 
    false
)</formula>
    <label>Account Covered in last 15 days</label>
    <type>Checkbox</type>
</CustomField>