force-app/main/default/objects/Account/fields/ARTL_Activity_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Activity_Remarks__c</fullName>
    <label>Activity Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>