force-app/main/default/objects/Account/fields/ARTL_Alias__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Alias__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>