force-app/main/default/objects/Account/fields/ARTL_Bill_Franchise_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bill_Franchise_Tax_Code__c</fullName>
    <label>Bill Franchise Tax Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>