force-app/main/default/objects/Account/fields/ARTL_Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bill_Type__c</fullName>
    <label>Bill Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>