force-app/main/default/objects/Account/fields/ARTL_Billing_Aggregator_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Billing_Aggregator_Account_Number__c</fullName>
    <displayFormat>88-{00000000}</displayFormat>
    <label>Billing Aggregator Account Number</label>
    <type>AutoNumber</type>
</CustomField>