force-app/main/default/objects/Account/fields/ARTL_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EGB</fullName>
                <default>true</default>
                <label>EGB</label>
            </value>
            <value>
                <fullName>C&amp;I</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>