force-app/main/default/objects/Account/fields/ARTL_Channel__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATB</fullName>
            </value>
            <value>
                <fullName>AirtelIQ</fullName>
            </value>
            <value>
                <fullName>ECAF</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Reve</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>Siebel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>