force-app/main/default/objects/Account/fields/ARTL_Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Credit_Period__c</fullName>
    <label>Credit Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>