force-app/main/default/objects/Account/fields/ARTL_Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>CHANNEL</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>NDL</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>