force-app/main/default/objects/Account/fields/ARTL_DSG_Owner__c.field-meta.xml
<CustomField>
    <fullName>ARTL_DSG_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSG Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>contains</operation>
            <value>DSG</value>
        </filterItems>
        <infoMessage>Please add only DSG user</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>DSG_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>