force-app/main/default/objects/Account/fields/ARTL_FX_Leo_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_FX_Leo_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Leo Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>