force-app/main/default/objects/Account/fields/ARTL_Fx_System_Id__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Fx_System_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fx System Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>