force-app/main/default/objects/Account/fields/ARTL_FXSynch__c.field-meta.xml
<CustomField>
    <fullName>ARTL_FXSynch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FXSynch</label>
    <type>Checkbox</type>
</CustomField>