force-app/main/default/objects/Account/fields/ARTL_GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>ARTL_GST_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Applicable</label>
    <type>Checkbox</type>
</CustomField>