force-app/main/default/objects/Account/fields/ARTL_GST_Non_Applicable_Reason__c.field-meta.xml
<CustomField>
    <fullName>ARTL_GST_Non_Applicable_Reason__c</fullName>
    <label>GST Non Applicable Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied For</fullName>
            </value>
            <value>
                <fullName>Non-SEZ</fullName>
            </value>
            <value>
                <fullName>Zero Rated Supply- Export</fullName>
            </value>
            <value>
                <fullName>Non Taxable as transactions within same Company</fullName>
            </value>
            <value>
                <fullName>SEZ</fullName>
            </value>
            <value>
                <fullName>SEZ With Taxes</fullName>
            </value>
            <value>
                <fullName>Zero Rated Supply- FTWZ</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>UIN</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Airtel- Foreign Legal Entity</fullName>
            </value>
            <value>
                <fullName>Exempt Supply- Trust/Entities 12AA</fullName>
            </value>
            <value>
                <fullName>Exempt Supply- UNO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>