force-app/main/default/objects/Account/fields/ARTL_IntegrationId__c.field-meta.xml
<CustomField>
    <fullName>ARTL_IntegrationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IntegrationId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>