force-app/main/default/objects/Account/fields/ARTL_IsLoggedInUserIsTL__c.field-meta.xml
<CustomField>
    <fullName>ARTL_IsLoggedInUserIsTL__c</fullName>
    <formula>$User.Id == ARTL_TL__r.Id</formula>
    <label>IsLoggedInUserIsTL</label>
    <type>Checkbox</type>
</CustomField>