force-app/main/default/objects/Account/fields/ARTL_Last_Account_Coverage_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Last_Account_Coverage_Date__c</fullName>
    <label>Last Account Coverage Date</label>
    <type>Date</type>
</CustomField>