force-app/main/default/objects/Account/fields/ARTL_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>