force-app/main/default/objects/Account/fields/ARTL_License_Company__c.field-meta.xml
<CustomField>
    <fullName>ARTL_License_Company__c</fullName>
    <label>License Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>