force-app/main/default/objects/Account/fields/ARTL_Resident_Engineer_1__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Resident_Engineer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident Engineer 1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Resident Engineer 1)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>