force-app/main/default/objects/Account/fields/ARTL_Resident_Engineer_2__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Resident_Engineer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident Engineer 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Resident Engineer 2)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>