force-app/main/default/objects/Account/fields/ARTL_Resident_Engineer_3__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Resident_Engineer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resident Engineer 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Resident Engineer 3)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>