force-app/main/default/objects/Account/fields/ARTL_SAM_Account_Visit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>ARTL_SAM_Account_Visit_Frequency__c</fullName>
    <label>SAM Account Visit Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>