force-app/main/default/objects/Account/fields/ARTL_Service_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Service_Account_Number__c</fullName>
    <displayFormat>77-{00000000}</displayFormat>
    <label>Service Account Number</label>
    <type>AutoNumber</type>
</CustomField>