force-app/main/default/objects/Account/fields/ARTL_Service_Segment__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Service_Segment__c</fullName>
    <label>Service Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ARTL_Customer_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Bharti</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>Enterprise Platinum</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Transformation</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Top Account</fullName>
            </value>
            <value>
                <fullName>Growth Account</fullName>
            </value>
            <value>
                <fullName>GB Platinum</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>AB channels</fullName>
            </value>
            <value>
                <fullName>NDL Channels</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>