force-app/main/default/objects/Account/fields/ARTL_Siebel_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Siebel_Sync_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Siebel Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>