force-app/main/default/objects/Account/fields/ARTL_Store__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Store__c</fullName>
    <label>Store</label>
    <length>10</length>
    <type>Text</type>
</CustomField>