force-app/main/default/objects/Account/fields/ARTL_Taxation__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Taxation__c</fullName>
    <label>Taxation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>