force-app/main/default/objects/Account/fields/ARTL_Virtual_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Virtual_Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Virtual Account Number</label>
    <referenceTo>ARTL_VAN_AccountNumbers__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>