force-app/main/default/objects/Account/fields/BCP_DCP_Id__c.field-meta.xml
<CustomField>
    <fullName>BCP_DCP_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BCP_DCP_Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>