force-app/main/default/objects/Account/fields/Bill_Franchise_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Franchise_Tax_Code__c</fullName>
    <label>Bill Franchise Tax Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>