force-app/main/default/objects/Account/fields/Billing_Level__c.field-meta.xml
<CustomField>
    <fullName>Billing_Level__c</fullName>
    <label>Billing Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LSI Level</fullName>
            </value>
            <value>
                <fullName>Account Level</fullName>
            </value>
            <value>
                <fullName>PO Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>