force-app/main/default/objects/Account/fields/billingId__c.field-meta.xml
<CustomField>
    <fullName>billingId__c</fullName>
    <label>billingId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>