force-app/main/default/objects/Account/fields/Clients_Top_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Clients_Top_Competitors__c</fullName>
    <label>Client’s Top Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>