force-app/main/default/objects/Account/fields/Customer_Origin__c.field-meta.xml
<CustomField>
    <fullName>Customer_Origin__c</fullName>
    <label>Customer Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>