force-app/main/default/objects/Account/fields/DocUrl__c.field-meta.xml
<CustomField>
    <fullName>DocUrl__c</fullName>
    <label>DocUrl</label>
    <type>Url</type>
</CustomField>