force-app/main/default/objects/Account/fields/eKYC_Number__c.field-meta.xml
<CustomField>
    <fullName>eKYC_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>eKYC Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>