force-app/main/default/objects/Account/fields/Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Reason__c</fullName>
    <label>Exempt Reason</label>
    <length>10</length>
    <type>Text</type>
</CustomField>