force-app/main/default/objects/Account/fields/isMigrated__c.field-meta.xml
<CustomField>
    <fullName>isMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Data Migration</description>
    <label>isMigrated</label>
    <type>Checkbox</type>
</CustomField>