force-app/main/default/objects/Account/fields/Last_Account_Coverage_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Coverage_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Account Coverage DateTime</label>
    <type>DateTime</type>
</CustomField>