force-app/main/default/objects/Account/fields/Markets_Customers__c.field-meta.xml
<CustomField>
    <fullName>Markets_Customers__c</fullName>
    <label>Markets/Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>