force-app/main/default/objects/Account/fields/MBR_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>MBR_Completion_Date__c</fullName>
    <label>MBR Completion Date</label>
    <type>Date</type>
</CustomField>