force-app/main/default/objects/Account/fields/MD5Hash__c.field-meta.xml
<CustomField>
    <fullName>MD5Hash__c</fullName>
    <label>MD5Hash</label>
    <length>100</length>
    <type>Text</type>
</CustomField>