force-app/main/default/objects/Account/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <label>Net Income (INR Crores)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>