force-app/main/default/objects/Account/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <label>Prospect (Invaid Field for Testing POC)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>