force-app/main/default/objects/Account/fields/QBR_Completion_date__c.field-meta.xml
<CustomField>
    <fullName>QBR_Completion_date__c</fullName>
    <label>QBR Completion date</label>
    <type>Date</type>
</CustomField>