force-app/main/default/objects/Account/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue (INR Crores)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>