force-app/main/default/objects/Account/fields/SAM_MBR_Date__c.field-meta.xml
<CustomField>
    <fullName>SAM_MBR_Date__c</fullName>
    <description>Field to update Date of activity completion for SAM</description>
    <label>SAM MBR Date</label>
    <type>DateTime</type>
</CustomField>