force-app/main/default/objects/Account/fields/SAM_QBR_Date__c.field-meta.xml
<CustomField>
    <fullName>SAM_QBR_Date__c</fullName>
    <description>JIRA 1105 Field to update completion date of  QBR event</description>
    <label>SAM QBR Date</label>
    <type>DateTime</type>
</CustomField>