force-app/main/default/objects/Account/fields/Step_2_Status__c.field-meta.xml
<CustomField>
    <fullName>Step_2_Status__c</fullName>
    <label>FX Callout Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>