force-app/main/default/objects/Account/fields/TSM__c.field-meta.xml
<CustomField>
    <fullName>TSM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TSM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>